Update 5-1. FIORI 총정리.md

--- a/RAP/5-1. FIORI 총정리.md
+++ b/RAP/5-1. FIORI 총정리.md
@@ -5471,6 +5471,9 @@ sap.ui.define([
             });
         },
         onPatternMatched: function(oEvent) {
+			this.byId("idChart").setVisible(false);
+			this.byId("idChartButton").setVisible(false);
+
             let sParam = oEvent.getParameters().arguments.param1;
             
             let oDataModel = this.getView().getModel();
