Update 1-2. 프로그래밍 코드 최적화(02.02).md

--- a/RAP/1-2. 프로그래밍 코드 최적화(02.02).md
+++ b/RAP/1-2. 프로그래밍 코드 최적화(02.02).md
@@ -1,8 +1,20 @@
 ## <  핵심 개념 >
 </br>
 
-- **1) `module pool program` 생성 방법 ( 일반 프로그램 생성 방법에서 include 파일 포함 )**
-- **2) 모듈풀 프로그램은 무조건 `TCODE` 생성해야 함**
+- **1) replace**
+- **2) 문자열 연결 (&&)**
+- **3) 문자열 템플릿 (String Templates)**
+- **4) SET COUNTRY / DATE FORMAT**
+- **5) ABAP Inline Data Declarations 정리**
+- **6) NEW( ) 객체 생성**
+- **7) CAST( ) / INSTANCE OF / CASE TYPE OF**
+- **8) VALUE( )**
+- **9) REF( )**
+- **10) CONV( )**
+- **11) EXACT( )**
+- **12) CORRESPONDING( )**
+- **13) COND( )**
+- **14) SWITCH( )**
 
 </br>
 
