--- a/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
+++ b/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
@@ -27,6 +27,12 @@
 ### < Fiori OData 서비스 추가 연결 >
 </br>
 
+- `Network` 에서 `meta` 검색 후 들어가기
+<img width="471" height="254" alt="image" src="https://github.com/user-attachments/assets/8252554b-bd09-489a-a1ea-360304d675a7" />
+</br>
+</br>
+</br>
+
 **1) `Open Application Info` 선택**
 
 <img width="456" height="231" alt="image" src="https://github.com/user-attachments/assets/991dca8c-b3db-474f-9fb9-6b78ff60de0c" />
