Update 1-5. 프로그래밍 코드 최적화(02.05).md

--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -20,3 +20,45 @@
 this._oPersonModel = this.getOwnerComponent().getModel();
 ```
 </br>
+</br>
+
+### 2) OData 단건 조회 (EntitySet Read)
+- 키가 1개면 필드명 생략 가능 → `/EntitySet('값')`
+- 키가 여러 개면 키 이름 필수 → `/EntitySet(key1='값', key2='값')`
+```java
+// /EntitySet('KeyValue') → 단건
+this._oPersonModel.read("/PersonSet('9001')", {
+    success: function (oReturn) {
+        // oReturn = 단일 Entity
+        // oReturn.FieldName 형태로 바로 접근
+        debugger;
+    }.bind(this),
+    error: function (oError) {
+        console.log("Read EntitySet 에러!", oError);
+    }
+});
+
+// /EntitySet → 다건
+this._oPersonModel.read("/PersonSet", {
+    success: function (oReturn) {
+        // oReturn.results = Entity 배열
+        // oReturn.results[0].FieldName 형태로 접근
+        debugger;
+    }.bind(this),
+    error: function (oError) {
+        console.log("Read EntitySet 에러!", oError);
+    }
+});
+```
+
+</br>
+</br>
+
+---
+
+</br>
+
+## < 실습 코드 >
+</br>
+
+### 실습 1
