--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -62,3 +62,8 @@ this._oPersonModel.read("/PersonSet", {
 </br>
 
 ### 실습 1
+- read로 조회 후 input에 세팅하는 실습
+<img width="476" height="246" alt="image" src="https://github.com/user-attachments/assets/7dca9e87-de69-4ac3-8c0d-81f5586eef8f" />
+
+</br>
+
