Update 1-5. 프로그래밍 코드 최적화(02.05).md

--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -66,4 +66,48 @@ this._oPersonModel.read("/PersonSet", {
 <img width="474" height="244" alt="image" src="https://github.com/user-attachments/assets/431bc215-12b6-4521-9727-450b4d7a01f0" />
 
 </br>
+</br>
+</br>
 
+### 1) Main.view.xml
+```html
+// test 프로그램
+<Button text="EntitySet" press="onReadEntitySet" />
+```
+</br>
+
+### 2) Main.controller.js
+```java
+// test 프로그램
+
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/json/JSONModel"   // 사용할 라이브러리 추가
+], (Controller, JSONModel) => {
+    "use strict";
+
+    return Controller.extend("test1.controller.Main", {
+        onInit() {
+            this._oPersonModel = this.getOwnerComponent().getModel("ZCODE_PERSON2_SRV");
+        },
+        onReadEntitySet: function() {
+            // this._oPersonModel => oData V2 Model
+            let oModel = this.getView().getModel("view");
+    
+            this._oPersonModel.read("/PersonSet('9001')", {
+                success: function(oReturn) {
+                    // Request 요청이 성공하면, succcess 함수가 실행됨
+                    // console.log("Read EntitySet 성공!", oReturn);
+                    // oModel.setProperty("/salary", oReturn.results[0].Memo);
+                    oModel.setProperty("/name/FirstName", oReturn.Firstname);
+                    oModel.setProperty("/name/LastName", oReturn.Lastname);
+                    debugger;
+                }.bind(this),
+                error: function(oError) {
+                    console.log("Read EntitySet 에러!", oError);
+                }
+            })
+        }
+    });
+});
+```
