Update 1-4. 프로그래밍 코드 최적화(02.04).md

--- a/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
+++ b/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
@@ -95,6 +95,8 @@ https://port8080-workspaces-ws-vefo7.us10.trial.applicationstudio.cloud.sap/sap/
 
 ### 1. Main.controller.js
 ```java
+// test 프로그램
+
 sap.ui.define([
     "sap/ui/core/mvc/Controller",
     "sap/ui/model/json/JSONModel"   // 사용할 라이브러리 추가
@@ -145,6 +147,8 @@ sap.ui.define([
 
 ### 2. Main.view.xml
 ```html
+// test 프로그램
+
 <mvc:View controllerName="test1.controller.Main"
     xmlns:mvc="sap.ui.core.mvc"
     xmlns:core="sap.ui.core"
@@ -242,6 +246,8 @@ sap.ui.define([
 
 ### 2. Main.view.xml
 ```html
+// test 프로그램
+
 <mvc:View controllerName="test1.controller.Main"
     xmlns:mvc="sap.ui.core.mvc"
     xmlns:core="sap.ui.core"
@@ -359,6 +365,8 @@ sap.ui.define([
 
 ### 1. Main.view.xml
 ```html
+// test 프로그램
+
 <Table id="idProductsTable"
     inset="false"
     items="{/Carriers}">
@@ -399,6 +407,7 @@ sap.ui.define([
 
 ### 2. Main.controller.js
 ```java
+// test 프로그램
 onPress: function () {
     let oModel = this.getView().getModel("view");
     let oData = oModel.getProperty("/");            // oModel.getData();
@@ -416,3 +425,46 @@ onPress: function () {
 ### 실습 4
 - Table row 클릭시 해당 row의 데이터 가져오기 실습
 - getBinding 이용
+  
+<img width="474" height="320" alt="image" src="https://github.com/user-attachments/assets/f8ae09ed-684a-4713-9e42-7a40e71191b4" />
+</br>
+</br>
+</br>
+
+### 1. Main.view.xml
+- `selectionChange`와 `mode` 설
+```html
+// test 프로그램
+<Table id="idProductsTable"
+            inset="false"
+            mode="SingleSelectLeft"
+            selectionChange="onSelectionChange"
+            items="{/Carriers}">
+```
+</br>
+</br>
+
+### 2. Main.controller.js
+```java
+// test 프로그램
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/json/JSONModel"   // 사용할 라이브러리 추가
+], (Controller, JSONModel) => {
+    "use strict";
+
+    return Controller.extend("test1.controller.Main", {
+        onSelectionChange: function(oEvent) {
+            let oModel = this.getView().getModel();
+            let sPath = oEvent.getParameters().listItem.getBindingContext().getPath();
+            let oData = oModel.getProperty(sPath);
+            sap.m.MessageBox.information(
+                `Carrid:  ${oData.Carrid} 
+                Carrname:  ${oData.Carrname} 
+                Currcode:  ${oData.Currcode}
+                Url:  ${oData.Url}`
+            );
+        }
+    });
+});
+```
