Update 1-5. 프로그래밍 코드 최적화(02.05).md

--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -58,6 +58,18 @@ this._oPersonModel.read("/PersonSet", {
 
 </br>
 
+## < SAP Gateway OData 서비스 생성·활성·테스트 흐름 (TCODE: `SEGW`) >
+- SEGW에서 OData 설계 → MAINT_SERVICE에서 서비스 활성화 → GW_CLIENT에서 URL 테스트
+<img width="315" height="175" alt="image" src="https://github.com/user-attachments/assets/dc8325ac-9057-42a3-bd43-9c3f032c3045" />
+
+
+</br>
+</br>
+
+---
+
+</br>
+
 ## < 실습 코드 >
 </br>
 
