--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -61,7 +61,15 @@ this._oPersonModel.read("/PersonSet", {
 ## < SAP Gateway OData 서비스 생성·활성·테스트 흐름 (TCODE: `SEGW`) >
 - SEGW에서 OData 설계 → MAINT_SERVICE에서 서비스 활성화 → GW_CLIENT에서 URL 테스트
 <img width="315" height="175" alt="image" src="https://github.com/user-attachments/assets/dc8325ac-9057-42a3-bd43-9c3f032c3045" />
+</br>
+</br>
+</br>
+</br>
 
+### 1) OData 연동을 위한 DB 테이블 정의
+- OData 서비스에서 사용할 사원 정보 테이블(ZTEMPINFO_B03)을 생성하고 필드와 Key를 정의
+
+<img width="513" height="225" alt="image" src="https://github.com/user-attachments/assets/5b3705b3-7aa1-4484-bfb3-95a05db69d8e" />
 
 </br>
 </br>
