Update 1-5. 프로그래밍 코드 최적화(02.05).md

--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -70,7 +70,16 @@ this._oPersonModel.read("/PersonSet", {
 - OData 서비스에서 사용할 사원 정보 테이블(ZTEMPINFO_B03)을 생성하고 필드와 Key를 정의
 
 <img width="513" height="225" alt="image" src="https://github.com/user-attachments/assets/5b3705b3-7aa1-4484-bfb3-95a05db69d8e" />
+</br>
+</br>
 
+### 2) `SEGW` 에서 OData 프로젝트 생성
+- SAP Gateway Service Builder(SEGW)에서 Employee OData 서비스를 위한 프로젝트를 생성
+
+<img width="428" height="256" alt="image" src="https://github.com/user-attachments/assets/b3736899-0229-402e-a84e-e2372d021a7b" />
+
+</br>
+</br>
 </br>
 </br>
 
