Update 1-5. 프로그래밍 코드 최적화(02.05).md

--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -82,6 +82,17 @@ this._oPersonModel.read("/PersonSet", {
 
 </br>
 </br>
+
+### 3) DB 테이블 기반 Entity 생성
+- SEGW에서 DDIC 테이블(ZTEMPINFO_B03)을 Import하여 Employee Entity와 EntitySet을 생성
+
+<img width="375" height="251" alt="image" src="https://github.com/user-attachments/assets/216e5112-5bf7-45a4-a78c-399dd9f8d8ff" />
+
+<img width="433" height="268" alt="image" src="https://github.com/user-attachments/assets/316f999a-9060-4eb2-bfd9-89a30ee88b7a" />
+
+
+</br>
+</br>
 </br>
 </br>
 
