Update 1-5. 프로그래밍 코드 최적화(02.05).md

--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -90,6 +90,14 @@ this._oPersonModel.read("/PersonSet", {
 
 <img width="433" height="268" alt="image" src="https://github.com/user-attachments/assets/316f999a-9060-4eb2-bfd9-89a30ee88b7a" />
 
+</br>
+</br>
+
+### 4) Entity 필드 속성 및 Key 설정
+- Employee Entity의 필드 타입을 확인하고 Primary Key를 지정하며, Nullable 옵션으로 해당 필드의 필수 입력 여부(NULL 허용/불가)를 설정
+  
+<img width="590" height="256" alt="image" src="https://github.com/user-attachments/assets/a4cee978-4e20-4308-bcf9-134187c31be8" />
+
 
 </br>
 </br>
