Update 1-5. 프로그래밍 코드 최적화(02.05).md

--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -65,6 +65,7 @@ this._oPersonModel.read("/PersonSet", {
 </br>
 </br>
 </br>
+</br>
 
 ### 1) OData 연동을 위한 DB 테이블 정의
 - OData 서비스에서 사용할 사원 정보 테이블(ZTEMPINFO_B03)을 생성하고 필드와 Key를 정의
@@ -99,7 +100,17 @@ this._oPersonModel.read("/PersonSet", {
 - Employee Entity의 필드 타입을 확인하고 Primary Key를 지정하며, Nullable 옵션으로 해당 필드의 필수 입력 여부(NULL 허용/불가)를 설정
   
 <img width="590" height="256" alt="image" src="https://github.com/user-attachments/assets/a4cee978-4e20-4308-bcf9-134187c31be8" />
+</br>
+</br>
+</br>
 
+### 5) Runtime Artifacts 생성 및 변경사항 반영
+- Generate 버튼을 눌러 Data Model 변경 내용을 기준으로 Runtime Artifacts(MPC/DPC)를 생성
+- 구조나 설정이 변경되면 반드시 다시 Generate 버튼을 눌러야 변경사항이 반영됨
+  
+<img width="409" height="161" alt="image" src="https://github.com/user-attachments/assets/44019cff-dc54-4d1c-a9cf-672bf28de402" />
+
+<img width="433" height="238" alt="image" src="https://github.com/user-attachments/assets/806f86c5-056b-4565-bea0-5b950f82c6f2" />
 
 </br>
 </br>
