--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -111,6 +111,15 @@ this._oPersonModel.read("/PersonSet", {
 <img width="409" height="161" alt="image" src="https://github.com/user-attachments/assets/44019cff-dc54-4d1c-a9cf-672bf28de402" />
 
 <img width="433" height="238" alt="image" src="https://github.com/user-attachments/assets/806f86c5-056b-4565-bea0-5b950f82c6f2" />
+</br>
+</br>
+
+### 6) OData 서비스 등록 및 활성화
+- SEGW에서 생성한 OData 서비스를 Gateway 시스템에 등록(Register)하여 외부에서 호출 가능하게 활성화
+
+<img width="508" height="201" alt="image" src="https://github.com/user-attachments/assets/7bf7fa93-0778-4f27-9f57-0115ceb1f953" />
+
+<img width="444" height="309" alt="image" src="https://github.com/user-attachments/assets/0e1f902d-c754-4d80-b81b-e3d38c1da3bd" />
 
 </br>
 </br>
