--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -119,7 +119,11 @@ this._oPersonModel.read("/PersonSet", {
 
 <img width="508" height="201" alt="image" src="https://github.com/user-attachments/assets/7bf7fa93-0778-4f27-9f57-0115ceb1f953" />
 
-<img width="496" height="345" alt="image" src="https://github.com/user-attachments/assets/54e19f81-2320-4496-bcea-f21c319ba16d" />
+<img width="533" height="370" alt="image" src="https://github.com/user-attachments/assets/3cdaaedc-da90-4cb8-99ac-272b4b3f3ca6" />
+</br>
+</br>
+
+### 6) OData 서비스 등록 및 활성화
 
 
 </br>
