Update 1-5. 프로그래밍 코드 최적화(02.05).md

--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -125,8 +125,19 @@ this._oPersonModel.read("/PersonSet", {
 </br>
 </br>
 
-### 6) OData 서비스 등록 및 활성화
+### 7) Gateway 서비스 관리 및 활성화 확인
+- /IWFND/MAINT_SERVICE에서 등록된 OData 서비스를 조회하고 활성화 상태, System Alias, ICF 노드를 관리
+  
+<img width="586" height="472" alt="image" src="https://github.com/user-attachments/assets/9727bf15-2d8c-4259-90e0-c9369d4dc73e" />
+</br>
+</br>
 
+### 8) SAP Gateway Client를 통한 OData 서비스 테스트
+- `SEGW` 또는 `/IWFND/GW_CLIENT` 에서 OData 서비스 URL을 실행하여 EntitySet 조회 및 응답 데이터를 테스트
+
+<img width="554" height="260" alt="image" src="https://github.com/user-attachments/assets/72e64852-9054-4c8e-9a79-264c7bd48451" />
+
+<img width="561" height="333" alt="image" src="https://github.com/user-attachments/assets/9bad1171-9ce6-4588-bc77-846ac9186ebe" />
 
 </br>
 </br>
