Update 1-5. 프로그래밍 코드 최적화(02.05).md

--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -141,6 +141,20 @@ this._oPersonModel.read("/PersonSet", {
 <img width="638" height="299" alt="image" src="https://github.com/user-attachments/assets/77b3e903-f2cb-457d-b72d-2fddb014316d" />
 
 <img width="651" height="387" alt="image" src="https://github.com/user-attachments/assets/008dbaf0-6f99-4b6b-9c37-79fcc4bd9392" />
+</br>
+</br>
+</br>
+
+### 9) SAP Gateway Client에서 CRUD 테스트
+- GET/POST/PUT/DELETE 방식으로 Read·Create·Update·Delete 동작을 테스트
+- 200번대 응답은 성공이며, 오류 발생 시 결과가 빨간색으로 표시됨
+- POST 요청은 Body에 데이터를 담아 전송하여 데이터 생성 수행
+
+<img width="626" height="384" alt="image" src="https://github.com/user-attachments/assets/61f6c753-907f-4fe0-b19f-fabb9650955f" />
+</br>
+</br>
+</br>
+
 
 
 </br>
