Update 1-5. 프로그래밍 코드 최적화(02.05).md

--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -3,6 +3,17 @@
 ```java
 this.oModel.read(`/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`, ...)
 ```
+
+- **2) sap.ui.table.Table 정리**
+
+| 구분 | 의미 | XML에서 쓰는 방식 | 예시 |
+|---|---|---|---|
+| Properties | 값 설정 | 속성 | selectionMode="Single" |
+| Aggregations | 자식 컨트롤 | 태그 | <t:columns> |
+| Associations | ID 연결 | 속성(ID) | ariaLabelledBy="titleId" |
+| Events | 이벤트 핸들러 | 속성 | rowSelectionChange="onSelect" |
+| Methods | 함수 | JS에서만 사용 | getSelectedIndex() |
+
 </br>
 </br>
 
