--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -4,7 +4,7 @@
 this.oModel.read(`/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`, ...)
 ```
 
-- **2) sap.ui.table.Table 정리**
+- **2) `sap.ui.table.Table` 정리**
 
 | 구분 | 의미 | XML에서 쓰는 방식 | 예시 |
 |---|---|---|---|
