Update 1-5. 프로그래밍 코드 최적화(02.05).md

--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -14,6 +14,7 @@ this.oModel.read(`/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`
 | Events | 이벤트 핸들러 | 속성 | rowSelectionChange="onSelect" |
 | Methods | 함수 | JS에서만 사용 | getSelectedIndex() |
 
+- **3) `m.Table` → 모바일·단순 조회용 List 기반 테이블, `ui.table.Table` → 데스크탑·대량 데이터용 ALV 스타일 Grid 테이블**
 </br>
 </br>
 
