Update 1-5. 프로그래밍 코드 최적화(02.05).md

--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -231,3 +231,18 @@ sap.ui.define([
     });
 });
 ```
+</br>
+</br>
+
+---
+
+</br>
+
+## < 실습 코드 >
+</br>
+
+### 실습 1
+- 테이블 중 한 행 선택하면 해당 행 정보 띄우기
+- m.table ui.table 실습
+
+<img width="444" height="200" alt="image" src="https://github.com/user-attachments/assets/6c8d6864-1c28-4b19-a2c6-b20fb0bb814c" />
