Update 1-5. 프로그래밍 코드 최적화(02.05).md

--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -245,4 +245,200 @@ sap.ui.define([
 - 테이블 중 한 행 선택하면 해당 행 정보 띄우기
 - m.table ui.table 실습
 
-<img width="444" height="200" alt="image" src="https://github.com/user-attachments/assets/6c8d6864-1c28-4b19-a2c6-b20fb0bb814c" />
+<img width="540" height="243" alt="image" src="https://github.com/user-attachments/assets/5bf25e0e-e0d5-49a7-8248-499d1edfc3bc" />
+</br>
+</br>
+</br>
+
+### 1) Main.controller.js
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller"
+], (Controller) => {
+    "use strict";
+
+    return Controller.extend("project1.controller.Main", {
+        onInit() {
+            this.oModel = this.getOwnerComponent().getModel();
+        },
+        onPress: function() {
+            let oTable = this.getView().byId("idEmployee");
+            let oItem = oTable.getSelectedItem();
+            let oData = oItem.getBindingContext().getObject();
+            this.oModel.read(`/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`, {
+                success: function(oReturn) {
+                    sap.m.MessageBox.information(
+                        `Empno:  ${oReturn.Empno}
+                        Memo:  ${oReturn.Memo} 
+                        Projod:  ${oReturn.Projod} 
+                        Role:  ${oReturn.Role} `,
+                        { title: "m.table 버튼 조회" }
+                    );
+                }.bind(this),
+                error: function(oError) {
+                    console.log("Read EntitySet 에러!", oError);
+                }
+            })
+            debugger;
+        },
+        onSelectionChange: function(oEvent) {
+            let sPath = oEvent.getParameters().listItem.getBindingContext().getPath();
+            let oData = this.oModel.getProperty(sPath);
+            this.oModel.read(`/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`, {
+                success: function(oReturn) {
+                    sap.m.MessageBox.information(
+                        `Empno:  ${oReturn.Empno}
+                        Memo:  ${oReturn.Memo} 
+                        Projod:  ${oReturn.Projod} 
+                        Role:  ${oReturn.Role} `,
+                        { title: "m.table 행 클릭 조회" }
+                    );
+                }.bind(this),
+                error: function(oError) {
+                    console.log("Read EntitySet 에러!", oError);
+                }
+            })
+        },
+        onPress2: function() {
+            let oTable = this.byId("idEmployee2");
+            let oIndex = oTable.getSelectedIndex();
+            let oData = oTable.getContextByIndex(oIndex).getObject();
+            this.oModel.read(`/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`, {
+                success: function(oReturn) {
+                    sap.m.MessageBox.information(
+                        `Empno:  ${oReturn.Empno}
+                        Memo:  ${oReturn.Memo} 
+                        Projod:  ${oReturn.Projod} 
+                        Role:  ${oReturn.Role} `,
+                        { title: "ui.table 버튼 조회" }
+                    );
+                }.bind(this),
+                error: function(oError) {
+                    console.log("Read EntitySet 에러!", oError);
+                }
+            })
+        },
+        onRowSelect: function(oEvent) {
+            let oContext = oEvent.getParameter("rowContext");
+            let oData = oContext.getObject();
+            this.oModel.read(`/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`, {
+                success: function(oReturn) {
+                    sap.m.MessageBox.information(
+                        `Empno:  ${oReturn.Empno}
+                        Memo:  ${oReturn.Memo} 
+                        Projod:  ${oReturn.Projod} 
+                        Role:  ${oReturn.Role} `,
+                        { title: "ui.table 행 클릭 조회" }
+                    );
+                }.bind(this),
+                error: function(oError) {
+                    console.log("Read EntitySet 에러!", oError);
+                }
+            })
+        }
+    });
+});
+```
+</br>
+
+### 2) Main.view.xml
+```html
+<mvc:View controllerName="project1.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:t="sap.ui.table"
+    xmlns="sap.m">
+    <Page id="page" title="{i18n>title}">
+        <VBox >
+            <Table id="idEmployee"
+                class="sapUiSmallMarginBottom"
+                inset="false"
+                mode="SingleSelectLeft"
+                selectionChange="onSelectionChange"
+                items="{/EmployeeSet}">
+                <headerToolbar>
+                    <OverflowToolbar>
+                        <content>
+                            <Title text="Employee" level="H2"/>
+                            <ToolbarSpacer />
+                            <Button text="클릭" press="onPress"/>
+                        </content>
+                    </OverflowToolbar>
+                </headerToolbar>
+                <infoToolbar>
+                    <OverflowToolbar>
+                        <Label text="Employee"/>
+                    </OverflowToolbar>
+                </infoToolbar>
+                <columns>
+                    <Column><Text text="EMPNO" /></Column>
+                    <Column><Text text="PROJOD" /></Column>
+                    <Column><Text text="ASSIGNDATE" /></Column>
+                    <Column><Text text="ROLE" /></Column>
+                    <Column><Text text="MEMO" /></Column>
+                </columns>
+                <items>
+                    <ColumnListItem vAlign="Middle">
+                        <cells>
+                            <Text text="{Empno}" />
+                            <Text text="{Projod}" />
+                            <Text text="{Assigndate}" />
+                            <Text text="{Role}" />
+                            <Text text="{Memo}" />
+                        </cells>
+                    </ColumnListItem>
+                </items>
+            </Table>
+
+            <t:Table rows="{/EmployeeSet}"
+                    id="idEmployee2"
+                    selectionMode="Single"
+                    rowSelectionChange="onRowSelect"
+                    >
+                <t:extension>
+                    <OverflowToolbar>
+                        <Title text="Employee" level="H2"/>
+                        <ToolbarSpacer />
+                        <Button text="클릭" press="onPress2"/>
+                    </OverflowToolbar>
+                </t:extension>
+                <t:columns>
+                    <t:Column>
+                        <Label text="EMPNO" />
+                        <t:template>
+                            <Text text="{Empno}" />
+                        </t:template>
+                    </t:Column>
+
+                    <t:Column>
+                        <Label text="PROJOD" />
+                        <t:template>
+                            <Text text="{Projod}" />
+                        </t:template>
+                    </t:Column>
+
+                    <t:Column>
+                        <Label text="ASSIGNDATE" />
+                        <t:template>
+                            <Text text="{Assigndate}" />
+                        </t:template>
+                    </t:Column>
+
+                    <t:Column>
+                        <Label text="ROLE" />
+                        <t:template>
+                            <Text text="Role" />
+                        </t:template>
+                    </t:Column>
+
+                    <t:Column>
+                        <Label text="MEMO" />
+                        <t:template>
+                            <Text text="{Memo}" />
+                        </t:template>
+                    </t:Column>
+                </t:columns>
+            </t:Table>
+        </VBox>
+    </Page>
+</mvc:View>
+```
