Update 1-5. 프로그래밍 코드 최적화(02.05).md

--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -167,6 +167,17 @@ this._oPersonModel.read("/PersonSet", {
 </br>
 </br>
 
+### 10) EntitySet 선택 및 응답 형식 설정
+- EntitySet을 더블클릭하면 URL이 자동 완성되며, 기본 응답은 XML 형식이고 `$format=json` 옵션을 추가하면 JSON 형식으로 응답이 반환됨
+
+<img width="654" height="331" alt="image" src="https://github.com/user-attachments/assets/ed7b868b-3ddd-48b7-a81a-a3d8b2e6f2cf" />
+
+<img width="650" height="352" alt="image" src="https://github.com/user-attachments/assets/156f56d8-c6ff-4c62-9969-c6b63e86b178" />
+
+</br>
+</br>
+</br>
+
 
 
 </br>
