Update 1-5. 프로그래밍 코드 최적화(02.05).md

--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -173,6 +173,12 @@ this._oPersonModel.read("/PersonSet", {
 <img width="654" height="331" alt="image" src="https://github.com/user-attachments/assets/ed7b868b-3ddd-48b7-a81a-a3d8b2e6f2cf" />
 
 <img width="650" height="352" alt="image" src="https://github.com/user-attachments/assets/156f56d8-c6ff-4c62-9969-c6b63e86b178" />
+</br>
+</br>
+</br>
+
+### 11) Runtime Artifacts 클래스 확인 및 로직 구현
+<img width="716" height="335" alt="image" src="https://github.com/user-attachments/assets/af85cfc5-b0fc-456d-b67e-f9e75804f986" />
 
 </br>
 </br>
