Update 1-5. 프로그래밍 코드 최적화(02.05).md

--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -177,15 +177,26 @@ this._oPersonModel.read("/PersonSet", {
 </br>
 </br>
 
-### 11) Runtime Artifacts 클래스 확인 및 로직 구현
+### 11) GET_ENTITYSET 메소드 구현
+- DPC_EXT 클래스에서 `EMPLOYEESET_GET_ENTITYSET` 메소드를 구현하여 EmployeeSet 조회 시 DB 테이블(ZTEMPINFO_B03)에서 데이터를 SELECT하여 응답으로 반환
+```abap
+  method EMPLOYEESET_GET_ENTITYSET.
+    SELECT * FROM ztempinfo_b03
+      INTO CORRESPONDING FIELDS OF TABLE et_entityset.
+  endmethod.
+```
 <img width="716" height="335" alt="image" src="https://github.com/user-attachments/assets/af85cfc5-b0fc-456d-b67e-f9e75804f986" />
 
+<img width="713" height="371" alt="image" src="https://github.com/user-attachments/assets/937b1c4c-5594-4a17-95f3-57d93547492a" />
+
 </br>
 </br>
 </br>
 
-
-
+### 12) GET_ENTITY 메소드 구현 (단건 조회)
+- DPC_EXT 클래스의 `EMPLOYEESET_GET_ENTITY` 메소드에서 키 필드(Empno, Projod)를 추출해 DB 테이블(ZTEMPINFO_B03)에서 단건 데이터를 조회하여 반환
+- `IT_KEY_TAB` → GET_ENTITY 요청 URL에 포함된 Key 필드 값 목록 (WHERE 조건용)
+- `ER_ENTITY` → 조회된 단건 데이터를 담아 OData 응답으로 반환하는 Entity 구조
 </br>
 </br>
 </br>
