--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -180,6 +180,7 @@ this._oPersonModel.read("/PersonSet", {
 ### 11) GET_ENTITYSET 메소드 구현
 - DPC_EXT 클래스에서 `EMPLOYEESET_GET_ENTITYSET` 메소드를 구현하여 EmployeeSet 조회 시 DB 테이블(ZTEMPINFO_B03)에서 데이터를 SELECT하여 응답으로 반환
 ```abap
+" ZCL_ZGWEMP_B03_DPC_EXT : EMPLOYEESET_GET_ENTITYSET
   method EMPLOYEESET_GET_ENTITYSET.
     SELECT * FROM ztempinfo_b03
       INTO CORRESPONDING FIELDS OF TABLE et_entityset.
@@ -197,6 +198,37 @@ this._oPersonModel.read("/PersonSet", {
 - DPC_EXT 클래스의 `EMPLOYEESET_GET_ENTITY` 메소드에서 키 필드(Empno, Projod)를 추출해 DB 테이블(ZTEMPINFO_B03)에서 단건 데이터를 조회하여 반환
 - `IT_KEY_TAB` → GET_ENTITY 요청 URL에 포함된 Key 필드 값 목록 (WHERE 조건용)
 - `ER_ENTITY` → 조회된 단건 데이터를 담아 OData 응답으로 반환하는 Entity 구조
+```abap
+" ZCL_ZGWEMP_B03_DPC_EXT : EMPLOYEESET_GET_ENTITY
+  method EMPLOYEESET_GET_ENTITY.
+    DATA: ls_data TYPE ztempinfo_b03.
+
+    "/EntitySet(key1='값1',key2='값2')
+    LOOP AT it_key_tab INTO DATA(ls_key).
+      CASE ls_key-name. " 키 프로퍼티의 이름(Entity기준)
+        WHEN 'Empno'.
+          ls_data-empno = ls_key-value.
+        WHEN 'Projod'.
+          ls_data-projod = ls_key-value.
+        WHEN OTHERS.
+      ENDCASE.
+    ENDLOOP.
+
+    SELECT SINGLE * FROM ztempinfo_b03
+      INTO @DATA(ls_result)
+      WHERE empno = @ls_data-empno
+        AND projod = @ls_data-projod.
+
+    IF sy-subrc = 0.
+      MOVE-CORRESPONDING ls_result TO er_entity.
+    ENDIF.
+  endmethod.
+```
+
+<img width="716" height="335" alt="image" src="https://github.com/user-attachments/assets/715b944b-d62c-453c-ac41-7599f0a3bae4" />
+
+<img width="714" height="282" alt="image" src="https://github.com/user-attachments/assets/a7cc3a8e-035c-467d-b1b9-c091413b6bda" />
+
 </br>
 </br>
 </br>
