--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -232,6 +232,15 @@ this._oPersonModel.read("/PersonSet", {
 <img width="827" height="213" alt="image" src="https://github.com/user-attachments/assets/e757fc4f-233a-407a-b256-0cdb0665c806" />
 
 <img width="739" height="342" alt="image" src="https://github.com/user-attachments/assets/c0c609bc-93d6-4f24-9dc6-38150f577a65" />
+</br>
+</br>
+</br>
+
+### 13) GET_ENTITY 호출 시 Key 작성 규칙
+- OData GET_ENTITY 호출에서는 Key가 1개면 해당 값만 작성하고, 복합 Key일 경우 모든 Key 값을 `(Key1='값',Key2='값')` 형태로 반드시 모두 작성해야 함
+
+
+<img width="707" height="282" alt="image" src="https://github.com/user-attachments/assets/624303af-4ac0-4aab-863b-4127efe45164" />
 
 </br>
 </br>
@@ -248,6 +257,13 @@ this._oPersonModel.read("/PersonSet", {
 ### 실습 1
 - read로 조회 후 input에 세팅하는 실습
 <img width="474" height="244" alt="image" src="https://github.com/user-attachments/assets/431bc215-12b6-4521-9727-450b4d7a01f0" />
+
+- 전체 조회
+<img width="737" height="346" alt="image" src="https://github.com/user-attachments/assets/81957bad-719f-4031-b074-d415f4e26c18" />
+
+- 단 건 조회
+<img width="757" height="350" alt="image" src="https://github.com/user-attachments/assets/b05dc6dd-03f8-4468-b921-f414ccfb7ba2" />
+
 
 </br>
 </br>
