Update 1-5. 프로그래밍 코드 최적화(02.05).md

--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -242,10 +242,17 @@ this._oPersonModel.read("/PersonSet", {
 <img width="707" height="282" alt="image" src="https://github.com/user-attachments/assets/624303af-4ac0-4aab-863b-4127efe45164" />
 
 - 전체 조회
-<img width="737" height="346" alt="image" src="https://github.com/user-attachments/assets/81957bad-719f-4031-b074-d415f4e26c18" />
+<img width="797" height="375" alt="image" src="https://github.com/user-attachments/assets/88ca391d-fc94-4dec-a72a-f27519dd12bc" />
+
 
 - 단 건 조회
-<img width="757" height="350" alt="image" src="https://github.com/user-attachments/assets/b05dc6dd-03f8-4468-b921-f414ccfb7ba2" />
+<img width="806" height="373" alt="image" src="https://github.com/user-attachments/assets/013df931-6e69-407e-86e2-1caba491f49d" />
+</br>
+</br>
+</br>
+
+### 14) SAP Fiori Generator – OData 서비스 선택
+<img width="646" height="307" alt="image" src="https://github.com/user-attachments/assets/44dd9b17-bd83-4a9a-ac70-2bfa62f05bbf" />
 
 </br>
 </br>
