Update 1-5. 프로그래밍 코드 최적화(02.05).md

--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -253,7 +253,18 @@ this._oPersonModel.read("/PersonSet", {
 
 ### 14) SAP Fiori Generator – OData 서비스 선택
 <img width="646" height="307" alt="image" src="https://github.com/user-attachments/assets/44dd9b17-bd83-4a9a-ac70-2bfa62f05bbf" />
+</br>
+</br>
+</br>
 
+### 15) OData 서비스 메타데이터 갱신
+- Manage Service Models에서 OData 서비스의 메타데이터를 Refresh & Save 하여 변경된 서비스 구조를 Fiori 앱에 반영
+  
+<img width="602" height="298" alt="image" src="https://github.com/user-attachments/assets/ea453733-0aa0-4d44-8605-b91218c80c64" />
+
+<img width="489" height="259" alt="image" src="https://github.com/user-attachments/assets/fb4c6c96-28f8-49da-aae6-aa8b49abbde0" />
+
+</br>
 </br>
 </br>
 </br>
