Update 1-5. 프로그래밍 코드 최적화(02.05).md

--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -77,6 +77,18 @@ this._oPersonModel.read("/PersonSet", {
 </br>
 </br>
 </br>
+
+### SAP Gateway 주요 T-Code 역할 정리
+- `SEGW` → OData 서비스 모델(Entity, EntitySet 등) 설계 및 Runtime 클래스 생성
+- `/n/IWFND/MAINT_SERVICE` → 생성한 OData 서비스를 Gateway에 등록하고 활성화
+- `/n/IWFND/GW_CLIENT` → OData 서비스 URL 호출 및 CRUD 테스트 수행
+  
+<img width="646" height="300" alt="image" src="https://github.com/user-attachments/assets/735223ec-bbe0-4e14-8402-eaa7d8bcf40c" />
+
+</br>
+</br>
+</br>
+</br>
 </br>
 
 ### 1) OData 연동을 위한 DB 테이블 정의
@@ -117,7 +129,7 @@ this._oPersonModel.read("/PersonSet", {
 </br>
 
 ### 5) Runtime Artifacts 생성 및 변경사항 반영
-- Generate 버튼을 눌러 Data Model 변경 내용을 기준으로 Runtime Artifacts(MPC/DPC)를 생성
+- SEGW에서 Data Model(Entity, Property, Key 등)을 변경하면, 실제 실행에 사용되는 Runtime 클래스(MPC/DPC)에 그 변경사항을 반영
 - 구조나 설정이 변경되면 반드시 다시 Generate 버튼을 눌러야 변경사항이 반영됨
   
 <img width="409" height="161" alt="image" src="https://github.com/user-attachments/assets/44019cff-dc54-4d1c-a9cf-672bf28de402" />
@@ -263,6 +275,14 @@ this._oPersonModel.read("/PersonSet", {
 <img width="602" height="298" alt="image" src="https://github.com/user-attachments/assets/ea453733-0aa0-4d44-8605-b91218c80c64" />
 
 <img width="489" height="259" alt="image" src="https://github.com/user-attachments/assets/fb4c6c96-28f8-49da-aae6-aa8b49abbde0" />
+</br>
+</br>
+</br>
+
+### 추가 기능 - Entity Property–DB 필드 매핑 확인
+- SEGW의 Properties 화면에서 OData Entity 속성과 DB 테이블 필드(ABAP Field)가 정상적으로 매핑되었는지 확인하는 단계
+  
+<img width="621" height="131" alt="image" src="https://github.com/user-attachments/assets/945b6217-1d73-4421-aa86-756e3f3dcf2d" />
 
 </br>
 </br>
