Update 1-5. 프로그래밍 코드 최적화(02.05).md

--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -15,9 +15,9 @@ this.oModel.read(`/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`
 | Methods | 함수 | JS에서만 사용 | getSelectedIndex() |
 
 - **3) `m.Table` → 모바일·단순 조회용 List 기반 테이블, `ui.table.Table` → 데스크탑·대량 데이터용 ALV 스타일 Grid 테이블**
-- **4) SEGW : OData 서비스 모델 설계 및 Runtime 클래스 생성**
-- **5) /n/IWFND/MAINT_SERVICE : OData 서비스 등록·활성화 관리**
-- **6) /n/IWFND/GW_CLIENT : OData 서비스 URL 호출 및 테스트**
+- **4) `SEGW` : OData 서비스 모델 설계 및 Runtime 클래스 생성**
+- **5) `/n/IWFND/MAINT_SERVICE` : OData 서비스 등록·활성화 관리**
+- **6) `/n/IWFND/GW_CLIENT` : OData 서비스 URL 호출 및 테스트**
 </br>
 </br>
 
