Update 1-5. 프로그래밍 코드 최적화(02.05).md

--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -371,6 +371,8 @@ sap.ui.define([
 
 ### 1) Main.controller.js
 ```java
+// project1
+
 sap.ui.define([
     "sap/ui/core/mvc/Controller"
 ], (Controller) => {
@@ -421,16 +423,13 @@ sap.ui.define([
         onPress2: function() {
             let oTable = this.byId("idEmployee2");
             let oIndex = oTable.getSelectedIndex();
+
+            if (oIndex < 0) return sap.m.MessageToast.show("데이터를 선택하세요.");
+
             let oData = oTable.getContextByIndex(oIndex).getObject();
             this.oModel.read(`/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`, {
                 success: function(oReturn) {
-                    sap.m.MessageBox.information(
-                        `Empno:  ${oReturn.Empno}
-                        Memo:  ${oReturn.Memo} 
-                        Projod:  ${oReturn.Projod} 
-                        Role:  ${oReturn.Role} `,
-                        { title: "ui.table 버튼 조회" }
-                    );
+                    sap.m.MessageToast.show("ui.table 버튼으로 1건 조회", oReturn);
                 }.bind(this),
                 error: function(oError) {
                     console.log("Read EntitySet 에러!", oError);
@@ -462,6 +461,8 @@ sap.ui.define([
 
 ### 2) Main.view.xml
 ```html
+// project1
+
 <mvc:View controllerName="project1.controller.Main"
     xmlns:mvc="sap.ui.core.mvc"
     xmlns:t="sap.ui.table"
@@ -500,7 +501,11 @@ sap.ui.define([
                         <cells>
                             <Text text="{Empno}" />
                             <Text text="{Projod}" />
-                            <Text text="{Assigndate}" />
+                            <Text text="{
+                                path: 'Assigndate',
+                                type: 'sap.ui.model.type.DateTime',
+                                formatOptions: { pattern : 'yyyy-MM-dd' }
+                            }" />
                             <Text text="{Role}" />
                             <Text text="{Memo}" />
                         </cells>
@@ -511,6 +516,7 @@ sap.ui.define([
             <t:Table rows="{/EmployeeSet}"
                     id="idEmployee2"
                     selectionMode="Single"
+                    selectionBehavior="RowOnly"
                     rowSelectionChange="onRowSelect"
                     >
                 <t:extension>
@@ -538,7 +544,11 @@ sap.ui.define([
                     <t:Column>
                         <Label text="ASSIGNDATE" />
                         <t:template>
-                            <Text text="{Assigndate}" />
+                            <Text text="{
+                                path: 'Assigndate',
+                                type: 'sap.ui.model.type.DateTime',
+                                formatOptions: { pattern : 'yyyy-MM-dd' }
+                            }" />
                         </t:template>
                     </t:Column>
 
