Update 1-5. 프로그래밍 코드 최적화(02.05).md

--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -437,6 +437,7 @@ sap.ui.define([
             })
         },
         onRowSelect: function(oEvent) {
+            let oRowIndex = oEvent.getParameter("rowIndex");
             let oContext = oEvent.getParameter("rowContext");
             let oData = oContext.getObject();
             this.oModel.read(`/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`, {
