Update 1-5. 프로그래밍 코드 최적화(02.05).md

--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -19,6 +19,14 @@ this.oModel.read(`/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`
 - **5) `/n/IWFND/MAINT_SERVICE` : OData 서비스 등록·활성화 관리**
 - **6) `/n/IWFND/GW_CLIENT` : OData 서비스 URL 호출 및 테스트**
 </br>
+
+- **1) `Properties` : 테이블의 전체 설정값(행 수, 선택 방식 등)**
+- **2) `Aggregations` : 테이블이 포함하는 구성요소(컬럼, 행 데이터)**
+- **3) `Events` : 사용자 동작을 감지하는 이벤트(행 선택, 셀 클릭)**
+- **4) `Methods` : JS에서 테이블을 제어·데이터를 가져오는 함수들**
+- **5) `Constructor` : 테이블 생성 시 초기 설정 정보**
+- **6) `Associations` : 다른 컨트롤과 ID로 연결되는 관계(실무 사용 적음)**
+</br>
 </br>
 
 ---
