Update 1-5. 프로그래밍 코드 최적화(02.05).md

--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -20,6 +20,7 @@ this.oModel.read(`/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`
 - **6) `/n/IWFND/GW_CLIENT` : OData 서비스 URL 호출 및 테스트**
 </br>
 
+### < API 문서 보는 법 >
 - **1) `Properties` : 테이블의 전체 설정값(행 수, 선택 방식 등)**
 - **2) `Aggregations` : 테이블이 포함하는 구성요소(컬럼, 행 데이터)**
 - **3) `Events` : 사용자 동작을 감지하는 이벤트(행 선택, 셀 클릭)**
