Update 1-6. 프로그래밍 코드 최적화(02.06).md

--- a/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
+++ b/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
@@ -1,1 +1,19 @@
+## <  핵심 개념 >
+- **1) `read()` 로 `GET_ENTITY` 호출 시, 문자 타입 키는 반드시 ' '로 감싸야 함**
+```java
+this.oModel.read(`/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`, ...)
+```
 
+- **2) `sap.ui.table.Table` 정리**
+
+</br>
+</br>
+
+---
+
+</br>
+
+## < Filter >
+</br>
+
+### 1) 컨트롤러 한정 전역 변수
