Update 1-5. 프로그래밍 코드 최적화(02.05).md

--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -212,6 +212,7 @@ this._oPersonModel.read("/PersonSet", {
 
 ### 11) GET_ENTITYSET 메소드 구현
 - DPC_EXT 클래스에서 `EMPLOYEESET_GET_ENTITYSET` 메소드를 구현하여 EmployeeSet 조회 시 DB 테이블(ZTEMPINFO_B03)에서 데이터를 SELECT하여 응답으로 반환
+- `et_entityset` → OData EntitySet 결과를 담아 UI로 반환하는 출력용 내부 테이블
 ```abap
 " ZCL_ZGWEMP_B03_DPC_EXT : EMPLOYEESET_GET_ENTITYSET
   method EMPLOYEESET_GET_ENTITYSET.
