Update 1-6. 프로그래밍 코드 최적화(02.06).md

--- a/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
+++ b/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
@@ -13,7 +13,71 @@ this.oModel.read(`/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`
 
 </br>
 
-## < Filter >
+## < OData EntitySet Filter 전달 >
 </br>
 
-### 1) 컨트롤러 한정 전역 변수
+- `it_filter_select_options` → OData 필터를 필드별 SELECT-OPTIONS 구조로 파싱해서 전달하는 내부 테이블
+- `iv_filter_string` → OData $filter 조건을 문자열 그대로 전달한 WHERE 절용 필터 문자열
+```java
+// project1
+
+onReadEntitySet: function() {
+    // new Filter(path, operator, value1, value2(operator가 BT 인 경우에 씀))
+    
+    // let aFilter = []
+    // let oFilter = new Filter("Memo", FilterOperator.Contains, "TEST2 MEMO");
+    // aFilter.push(oFilter);
+    let oFilter = [];
+    oFilter.push(new Filter("Memo", FilterOperator.Contains, "TEST2 MEMO"));
+    oFilter.push(new Filter("Role", FilterOperator.Contains, "TEST2"));
+    oFilter.push(new Filter("Projod", FilterOperator.NE, "TEST2")); // 5000번 데이터 띄우기
+
+    this.oModel.read("/EmployeeSet", {
+        filters: oFilter, //aFilters,
+        success: function(oReturn) {
+            sap.m.MessageToast.show("조회 완료, 콘솔창 확인!");
+            console.log("onReadEntitySet 전체 조회 성공 : ", oReturn.results);
+        }
+    })
+}
+```
+```abap
+" ZCL_ZGWEMP_B03_DPC_EXT : EMPLOYEESET_GET_ENTITYSET
+  method EMPLOYEESET_GET_ENTITYSET.
+    DATA: lr_memo TYPE /IWBEP/T_COD_SELECT_OPTIONS,
+          lr_role TYPE /IWBEP/T_COD_SELECT_OPTIONS,
+          lr_projod TYPE /IWBEP/T_COD_SELECT_OPTIONS.
+
+    IF it_filter_select_options IS INITIAL.
+      SELECT * FROM ztempinfo_b03
+        INTO CORRESPONDING FIELDS OF TABLE et_entityset.
+    ELSE.
+      " 만약 필터 정보가 들어왔다면, 필터 적용
+      LOOP AT it_filter_select_options INTO DATA(ls_filter).
+        CASE ls_filter-property.
+          WHEN 'Memo'.
+            APPEND LINES OF ls_filter-select_options TO lr_memo.
+          WHEN 'Role'.
+            APPEND LINES OF ls_filter-select_options TO lr_role.
+          WHEN 'Projod'.
+            APPEND LINES OF ls_filter-select_options TO lr_projod.
+          WHEN OTHERS.
+        ENDCASE.
+      ENDLOOP.
+
+      SELECT * FROM ztempinfo_b03
+        INTO CORRESPONDING FIELDS OF TABLE et_entityset
+        WHERE Memo IN lr_memo
+          AND Role IN lr_role
+          AND projod IN lr_projod.
+    ENDIF.
+*    IF iv_filter_string IS INITIAL.
+*      SELECT * FROM ztempinfo_b03
+*        INTO CORRESPONDING FIELDS OF TABLE et_entityset.
+*    ELSE.
+*      SELECT * FROM ztempinfo_b03
+*        INTO CORRESPONDING FIELDS OF TABLE et_entityset
+*        WHERE (iv_filter_string).
+*    ENDIF.
+  endmethod.
+```
