Update 1-6. 프로그래밍 코드 최적화(02.06).md

--- a/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
+++ b/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
@@ -18,6 +18,7 @@ this.oModel.read(`/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`
 
 - `it_filter_select_options` → OData 필터를 필드별 SELECT-OPTIONS 구조로 파싱해서 전달하는 내부 테이블
 - `iv_filter_string` → OData $filter 조건을 문자열 그대로 전달한 WHERE 절용 필터 문자열
+- `WHERE (변수)` 는 문자열을 SQL 조건식으로 해석하는 ABAP의 동적 WHERE 문법
 ```java
 // project1
 
