Update 1-6. 프로그래밍 코드 최적화(02.06).md

--- a/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
+++ b/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
@@ -19,6 +19,21 @@ this.oModel.read(`/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`
 - `it_filter_select_options` → OData 필터를 필드별 SELECT-OPTIONS 구조로 파싱해서 전달하는 내부 테이블
 - `iv_filter_string` → OData $filter 조건을 문자열 그대로 전달한 WHERE 절용 필터 문자열
 - `WHERE (변수)` 는 문자열을 SQL 조건식으로 해석하는 ABAP의 동적 WHERE 문법
+</br>
+
+- `UTC` → 전 세계 공통으로 사용하는 표준 시간 기준
+- `UTC+9` → 한국에서 사용하는 현지 시간 기준 (UTC보다 9시간 빠름)
+- `sap.ui.core.format.DateFormat.getInstance({ pattern: "yyyyMMdd", UTC: true })` → 날짜를 UTC 기준으로 yyyyMMdd 형식 문자열로 변환하는 포맷 객체 생성
+- `format()` → Date / Number 객체를 문자열로 변환하는 함수
+```java
+oDateFormat.format(oDate);   // Date → "yyyyMMdd"
+```
+- `parse()` → 문자열을 Date / Number 객체로 변환하는 함수
+```java
+oDateFormat.parse("20260203"); // "yyyyMMdd" → Date
+```
+</br>
+
 ```java
 // project1
 
@@ -28,10 +43,18 @@ onReadEntitySet: function() {
     // let aFilter = []
     // let oFilter = new Filter("Memo", FilterOperator.Contains, "TEST2 MEMO");
     // aFilter.push(oFilter);
+    let oDateFormat = sap.ui.core.format.DateFormat.getInstance({
+        pattern: "yyyyMMdd",
+        UTC: true
+    });
+    let oStartDate = oDateFormat.parse("20260119");
+    let oEndDate = oDateFormat.parse("20260701");
+
     let oFilter = [];
     oFilter.push(new Filter("Memo", FilterOperator.Contains, "TEST2 MEMO"));
-    oFilter.push(new Filter("Role", FilterOperator.Contains, "TEST2"));
-    oFilter.push(new Filter("Projod", FilterOperator.NE, "TEST2")); // 5000번 데이터 띄우기
+    // oFilter.push(new Filter("Role", FilterOperator.Contains, "TEST2"));
+    // oFilter.push(new Filter("Projod", FilterOperator.NE, "TEST2")); // 5000번 데이터 띄우기
+    oFilter.push(new Filter("Assigndate", FilterOperator.BT, oStartDate, oEndDate));
 
     this.oModel.read("/EmployeeSet", {
         filters: oFilter, //aFilters,
@@ -48,7 +71,8 @@ onReadEntitySet: function() {
   method EMPLOYEESET_GET_ENTITYSET.
     DATA: lr_memo TYPE /IWBEP/T_COD_SELECT_OPTIONS,
           lr_role TYPE /IWBEP/T_COD_SELECT_OPTIONS,
-          lr_projod TYPE /IWBEP/T_COD_SELECT_OPTIONS.
+          lr_projod TYPE /IWBEP/T_COD_SELECT_OPTIONS,
+          lr_date TYPE /IWBEP/T_COD_SELECT_OPTIONS.
 
     IF it_filter_select_options IS INITIAL.
       SELECT * FROM ztempinfo_b03
@@ -63,6 +87,8 @@ onReadEntitySet: function() {
             APPEND LINES OF ls_filter-select_options TO lr_role.
           WHEN 'Projod'.
             APPEND LINES OF ls_filter-select_options TO lr_projod.
+          WHEN 'Assigndate'.
+            APPEND LINES OF ls_filter-select_options TO lr_date.
           WHEN OTHERS.
         ENDCASE.
       ENDLOOP.
@@ -71,7 +97,8 @@ onReadEntitySet: function() {
         INTO CORRESPONDING FIELDS OF TABLE et_entityset
         WHERE Memo IN lr_memo
           AND Role IN lr_role
-          AND projod IN lr_projod.
+          AND projod IN lr_projod
+          AND assigndate IN lr_date.
     ENDIF.
 *    IF iv_filter_string IS INITIAL.
 *      SELECT * FROM ztempinfo_b03
